# px4-simulation-ignition

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  setup.bash
.github/workflows/: build_test.yml  firmware_build_test.yml  main.yaml
cmake/: FindMAVLink.cmake
include/: HelloWorld.h  common.h  gazebo_barometer_plugin.h  gazebo_gps_plugin.h  gazebo_magnetometer_plugin.h  gazebo_mavlink_interface.h  mavlink_interface.h  msgbuffer.h
models/x3/: model.sdf
msgs/: CMakeLists.txt  MagneticField.proto
src/: HelloWorld.cpp  gazebo_barometer_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  geo_mag_declination.cpp  mavlink_interface.cpp
worlds/: ignition.world  iris.world
